# grape-coder

./: .env.example  .gitignore  Contributing.md  LICENSE  README.md  fonts.md  graph-multi-agent.md  pyproject.toml  todo.txt
scripts/: script_test_review.py
src/grape_coder/: __init__.py  agent_loop.py  globals.py  main.py  models.py  providers.py  tools.py
src/grape_coder/agents/: __init__.py  chat.py  code.py  code_revision.py  css.py  generate_class.py  identifiers.py  mono_agent.py  orchestrator.py  text.py  todo.py
src/grape_coder/agents/common/: XML_validator_node.py  __init__.py  xml_utils.py
src/grape_coder/agents/composer/: __init__.py  composer.py  generate_class.py  generate_js.py  orchestrator.py  review_validator.py  reviewer.py  svg.py  text.py
src/grape_coder/agents/planner/: __init__.py  agents.py  architect.py  content_planner.py  designer.py  planner.py  researcher.py
src/grape_coder/agents/review/: __init__.py  code_revision.py  eslint_node.py  linter_node.py  review_context.py  review_data.py  review_graph.py  review_task_generator.py  review_xml_utils.py  reviewer.py  score_evaluator.py  task_generator.py
src/grape_coder/agents/utils/: __init__.py
src/grape_coder/config/: __init__.py  cli.py  litellm_integration.py  manager.py  models.py
src/grape_coder/display/: __init__.py  conversation_tracker.py  tool_tracker.py
src/grape_coder/nodes/: XML_validator_node.py  noinput.py  quality_checker.py  taskfiltering.py
src/grape_coder/templates/style/: main.css
src/grape_coder/tools/: __init__.py  agents.py  targeted_edit.py  tool_limit_hooks.py  tool_limit_tracker.py  web.py  work_path.py
tests/: __init__.py  test_agent.py  test_basic.py  test_config.py  test_litellm.py  test_litellm_integration.py  test_review_context.py
