[project]
name = "grape-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
grape-coder = "grape_coder:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
