[project]
name = "grape-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
    "pytest>=9.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "xmltodict>=0.13.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
grape-coder = "grape_coder.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
