[project]
name = "grape-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com" },
    { name = "rom100main", email = "rom100main@proton.me" },
    { name = "Antoine BRETZNER", email = "antoine.bretzner@telecomnancy.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.20.0",
    "pytest>=9.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "xmltodict>=0.13.0",
    "pytest-asyncio>=0.21.0",
    "prompt-toolkit>=3.0.0",
    "strands-agents",
    "strands-agents[litellm]>=0.1.0",
    "platformdirs>=4.0.0",
    "litellm>=1.0.0",
]

[project.scripts]
grape-coder = "grape_coder.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
